# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: color.h  hittable.h  main.cpp  sphere.h
